--- a/css/style.css
+++ b/css/style.css
@@ -216,14 +216,16 @@ body {
   margin: 0 auto;
   position: relative
 }
+.hero__title-item {
+  position: relative;
+  z-index: 3
+}
 .hero__title {
   color: #fff;
   font-family: "Lexend Deca";
   line-height: 1.33;
   letter-spacing: -.09375rem;
   max-width: 25rem;
-  position: relative;
-  z-index: 3;
   opacity: 0;
   -webkit-transform: translate(0,20%);
   transform: translate(0,20%)
@@ -256,6 +258,10 @@ body {
   transform: scale(1) rotate(0);
   transition: all 1.5s 1s
 }
+.hero__main-image-item {
+  position: relative;
+  z-index: 2
+}
 .hero__main-image {
   aspect-ratio: 412/459;
   width: 100%;
@@ -263,8 +269,6 @@ body {
   -o-object-fit: cover;
   object-fit: cover;
   border-radius: .16875rem;
-  position: relative;
-  z-index: 2;
   opacity: 0;
   -webkit-transform: translate(0,5%);
   transform: translate(0,5%)
@@ -322,9 +326,11 @@ body {
   padding-top: .5rem;
   position: relative
 }
-.hero__circle-image {
+.hero__circle-image-item {
   position: relative;
-  z-index: 3;
+  z-index: 3
+}
+.hero__circle-image {
   aspect-ratio: 1/1;
   width: 100%;
   height: 100%;
