--- a/css/style.css
+++ b/css/style.css
@@ -240,14 +240,15 @@ body {
   transition: all 1s .5s
 }
 .hero__media {
-  position: relative
+  position: relative;
+  z-index: 1
 }
 .hero__figure {
   position: absolute;
-  aspect-ratio: 197/197;
-  max-width: 47.815534%;
   bottom: -12.418301%;
   left: -21.84466%;
+  aspect-ratio: 197/197;
+  max-width: 47.815534%;
   -webkit-transform: scale(0) rotate(-50deg);
   transform: scale(0) rotate(-50deg);
   -webkit-transform-origin: top right;
@@ -299,6 +300,12 @@ body {
   transform: scale(1) rotate(0);
   transition: all 1.5s 1s
 }
+.hero__deco {
+  width: 100%;
+  height: 100%;
+  -webkit-transform: scale(0);
+  transform: scale(0)
+}
 .hero__deco-item--two {
   max-width: 58.009709%;
   aspect-ratio: 239/278;
@@ -315,12 +322,6 @@ body {
   -webkit-transform: scale(1) rotate(0);
   transform: scale(1) rotate(0);
   transition: all 1.5s 1s
-}
-.hero__deco {
-  width: 100%;
-  height: 100%;
-  -webkit-transform: scale(0);
-  transform: scale(0)
 }
 .hero__content {
   padding-top: .5rem;
@@ -355,8 +356,8 @@ body {
 @media (min-width:37.5em) {
   .hero__body {
     display: grid;
-    align-items: flex-start;
-    grid-template-columns: 41.88% 43.141361% auto
+    align-items: start;
+    grid-template-columns: 41.88% 31.099476% auto
   }
   .hero__title {
     padding-top: 10.893246%
